# Credit_Risk_Probability_Model

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: data.yaml
notebooks/: eda.ipynb  eda_top_insights.txt
script/: run_pipe.py
src/: data_processing.py  rfm_target.py  train.py
src/api/: main.py
src/modeling/: evalution.py
src/utility/: config_loader.py
