[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "src"
version = "0.1.0"
description = "A sample Python project"
authors = [{name="Your Name", email="you@example.com"}]
readme = "README.md"
license = {text="MIT"}
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
exclude = ["tests", "tests.*"]